# fiddlesticks

./: .coverage  .gitignore  LICENSE  README.md  coverage.xml  generate_failure_table.py  pyproject.toml
docs/: unified_operation_factory.md
src/fiddlesticks/: __init__.py
src/fiddlesticks/core/: dual_interface.py  operation_spec.py  pipeline_operation.py
src/fiddlesticks/execution/: __init__.py  assembler.py  debugger.py  optimizer.py  pipeline.py
src/fiddlesticks/integrations/: __init__.py  lightning_integration.py
src/fiddlesticks/io/: __init__.py  file_operations.py  format_conversion.py  stream_operations.py
src/fiddlesticks/operations/: kornia_wrappers.py  model_wrappers.py  registry.py  wrappers.py
src/fiddlesticks/registries/: model_registry.py  preprocessing_registry.py  quality_checks_registry.py  training_strategy_registry.py  transfer_function_registry.py
tests/integration/: test_utnet2_pipeline_integration.py
tests/unit/: test_dual_interface.py  test_io_operations.py  test_kornia_integration.py  test_lightning_integration.py  test_operation_registry.py  test_operation_spec.py  test_pipeline_execution.py  test_pipeline_operation.py  test_registry_extensions.py  test_utnet2_implementation.py
